# Gold_Price_DS

./: Makefile  README.md  pyproject.toml  requirements.txt
Gold_Price_DS/: Makefile  README.md  pyproject.toml
Gold_Price_DS/docs/: mkdocs.yml
Gold_Price_DS/docs/docs/: index.md
Gold_Price_DS/gold_price_ds/: __init__.py  dataset.py  features.py
Gold_Price_DS/gold_price_ds/modeling/: train.py
docs/: mkdocs.yml
docs/docs/: index.md
gold_price_ds/: dataset.py  plots.py
gold_price_ds/modeling/: predict.py
gold_prices_ds/: __init__.py  dataset.py  features.py  plots.py
gold_prices_ds/modeling/: predict.py  train.py
notebooks/: EDA_Gold_Prices.ipynb  GoldPrice_Returns_Prediction.ipynb  Gold_Price_Prediction_Analysis.ipynb
